--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,8 @@
 {
   "extends": "airbnb-base",
-  "rules" : {
-    "no-underscore-dangle": "off",
-    "disable-next-line": "0"
-
+  "rules":{
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+    "no-console": ["error", { "allow": ["log", "warn", "error"] }]
   }
 }
 
